--- a/mystyle.css
+++ b/mystyle.css
@@ -28,3 +28,15 @@ table.timetable tr.odd {
 table.timetable th{
     width: 120px;
 }
+
+.container {
+    width: 450px;
+    border-style: solid;
+    border-width: thin;
+    border-radius: 7px;
+    box-shadow: 2px 2px #888888;
+  }
+  
+  div{
+  padding: 10px;
+  }
